Made tons of corrections and changed mass songs

--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -79,8 +79,7 @@
     \input{songs-extra.tex}
   \end{songs}
 
-  \songsection{Miseénekek}
-  \renewcommand{\thesongnum}{M\arabic{songnum}}
+  \songsection{Liturgikus énekek}
   \begin{songs}{}
     \input{songs-mass.tex}
   \end{songs}
@@ -88,9 +87,11 @@
   \newpage
   \thispagestyle{empty}
 
-  To be continued...
-  \vfill
+  % To be continued...
+  \vspace*{\fill}
+  % \vfill
   Készítette: Balics Eszter és Donkó István
+  2017 .... blablabla
   % ?Lektorálta: Nobilis Márió?
 
 \end{document}
