--- a/songs-extra/jo-atyank-koszonjuk-neked.tex
+++ b/songs-extra/jo-atyank-koszonjuk-neked.tex
@@ -1,4 +1,4 @@
-\beginsong{Jó Atyánk, köszönjük Néked - !!}[]
+\beginsong{Jó Atyánk, köszönjük Néked}[]
 
   \ifchorded
     \beginverse*
@@ -7,22 +7,28 @@
   \fi
 
   \beginverse*\memorize
-    \[D]Jó Atyánk, köszönjük Néked \[G]………… -t,
-    A szívünkbe zártuk, \[D]hála \[D4]érte! \[D] \[D2]
+    \[D]Jó Atyánk, köszönjük Néked \[G]\_\_\_\_\_-t,
+    Szívünkbe zártuk, \[D]hála \[D4]érte! \[D] \[D2]
   \endverse
 
   \beginverse*
     ^Áldj meg minket, Krisztusunk, a  ^Lelked legyen
-    közöttünk míg ^együtt ^vagyunk! ^ ^
+    Közöttünk míg ^együtt ^vagyunk! ^ ^
   \endverse
+
+  \ifchorded
+    \beginverse*
+      {\nolyrics \[H7]}
+    \endverse
+  \fi
 
   \beginverse*\memorize
     \[E]Ó, Urunk, mi \[A]egyet aka\[E]runk, kik
-    ebben a dalban \[H7]együtt vagyunk:
+    Ebben a dalban \[H7]együtt vagyunk:
   \endverse
 
   \beginverse*
-    ^Szereteted fénye, á^ldása érje ^………… -t!
+    ^Szereteted fénye, á^ldása érje ^\_\_\_\_\_ -t!
     Legyen a ^Lelked véle! \[E]Alle\[A]lu\[E]ja!
   \endverse
 
