--- a/songs-extra/koszonjuk-neked-urunk.tex
+++ b/songs-extra/koszonjuk-neked-urunk.tex
@@ -1,17 +1,17 @@
-\beginsong{Köszönjük Néked, Urunk - !!}[]
+\beginsong{Köszönjük Néked, Urunk}[]
 
   \beginverse*\memorize
-    \[G]Köszönjük neked, \[C]Urunk, ………..-t, \[G] köszönjük neked \[D]örökké,
-    \[G]Ó, Urunk, mi \[C]nem hagyjuk el Őt, és \[G]Veled \[D]dalol\[G]juk: \echo{Együtt, mindenki!}
+    \[G]Köszönjük Néked, \[C]Urunk, \_\_\_\_\_-t, \[G] köszönjük Néked \[D]örökké,
+    \[G]Ó, Urunk, mi \[C]nem hagyjuk el őt, és \[G]Veled \[D]dalol\[G]juk: \echo{Együtt, mindenki!}
   \endverse
 
   \beginverse*
     ^Yep ye-e-e-^ep ye-e-e-^ep ye-e-e-^ep oh oh oh!
-    ^Yep ye-e-e-^ep ye-e-e ^yep oh ^yep oh ^yep \[D]oh \[G]yep!
+    ^Yep ye-e-e-^ep ye-e-e ^yep oh ^yep oh ^yep \[D]yep \[G]yep!
   \endverse
 
   \beginverse*
-    Pamparararam \[D]pam \[G]pam paramparampampam. \[G]
+    Pam-parararam \[D]pam \[G]pam param-param-pam-pam. \[G]
   \endverse
 
 \endsong
