--- a/songs-mass.tex
+++ b/songs-mass.tex
@@ -1,4 +1,19 @@
+\setcounter{songnum}{1}
+\setlength{\songnumwidth}{2cm}
+\renewcommand{\thesongnum}{Kyrie \arabic{songnum}}
 \input{songs-mass/uram-irgalmazz-k159.tex}
+
+\setcounter{songnum}{1}
+\setlength{\songnumwidth}{2.1cm}
+\renewcommand{\thesongnum}{Gloria \arabic{songnum}}
 \input{songs-mass/dicsoseg-k159.tex}
+
+\setcounter{songnum}{1}
+\setlength{\songnumwidth}{2.7cm}
+\renewcommand{\thesongnum}{Sanctus \arabic{songnum}}
 \input{songs-mass/szent-vagy-k192.tex}
+
+\setcounter{songnum}{1}
+\setlength{\songnumwidth}{3.3cm}
+\renewcommand{\thesongnum}{Agnus Dei \arabic{songnum}}
 \input{songs-mass/isten-baranya-k299.tex}
