--- a/songs/aldjad-en-lelkem-az-urat.tex
+++ b/songs/aldjad-en-lelkem-az-urat.tex
@@ -7,11 +7,11 @@
   \fi
 
   \beginverse\memorize
-    \[Am]Áldjad én \[Em]lelkem az U\[Am]rat! \[Em]
-    \[Am]Áld\[Em]jad én \[C]lelkem \[D7]az U\[E]rat! \echo{Alle\[E7]luja}
-    \[Am]Áldjad én \[Em]lelkem,
-    \[F]Áldjad én \[G6]lel\[C]kem,
-    \[Am]Áldjad én \[Em]lelkem az U\[Am]rat! \[Em] \[Am] \[Em]
+    \[Am]Áldjad, én \[Em]lelkem, az U\[Am]rat! \[Em]
+    \[Am]Áld\[Em]jad, én \[C]lelkem, \[D7]az U\[E]rat! \echo{Alle\[E7]luja}
+    \[Am]Áldjad, én \[Em]lelkem,
+    \[F]Áldjad, én \[G6]lel\[C]kem,
+    \[Am]Áldjad, én \[Em]lelkem, az U\[Am]rat! \[Em] \[Am] \[Em]
   \endverse
 
   \beginverse
@@ -31,11 +31,11 @@
   \endverse
 
   \beginverse
-    ^Áldjad én ^bensőm az U^rat! ^
-    ^Áld^jad én ^bensőm ^az U^rat! \echo{Alle^luja}
-    ^Áldjad én ^bensőm,
-    ^Áldjad én ^ben^sőm,
-    ^Áldjad én ^bensőm az U^rat! ^ ^ ^
+    ^Áldjad, én ^bensőm, az U^rat! ^
+    ^Áld^jad, én ^bensőm, ^az U^rat! \echo{Alle^luja}
+    ^Áldjad, én ^bensőm,
+    ^Áldjad, én ^ben^sőm,
+    ^Áldjad, én ^bensőm, az U^rat! ^ ^ ^
   \endverse
 
   \ifchorded
