--- a/songs/im-itt-jon-o.tex
+++ b/songs/im-itt-jon-o.tex
@@ -1,4 +1,4 @@
-\beginsong{Ím itt jön Ő}[]
+\beginsong{Ím, itt jön Ő}[]
 
   \versesep=12pt plus 3pt minus 7pt
 
@@ -9,15 +9,15 @@
   \fi
 
   \beginchorus
-    /: Ím, \[Em]itt jön Ő átkel \[Hm]a hegyen,
+    /: Ím, \[Em]itt jön Ő, átkel \[Hm]a hegyen,
     a \[Em]dombon át sza\[C]lad felém a \[Hm]kedve\[Em]sem! :/ \rep{2}
   \endchorus
 
   \beginverse\memorize
-    Hát \[G]jöjj Uram, lásd Ti\[D]éd a szívem,
-    A \[Em]kerted Téged vár a szőlőd \[H]is terem.
+    Hát \[G]jöjj, Uram, lásd, Ti\[D]éd a szívem,
+    A \[Em]kerted Téged vár, a szőlőd \[H]is terem.
     A \[G]szív dalol, zengi \[D]énekét:
-    A \[Em]lelkem ég ó \[C]Istenem sze\[Hm]relme\[Em]dért.
+    A \[Em]lelkem ég, ó \[C]Istenem, sze\[Hm]relme\[Em]dért.
   \endverse
 
   \beginverse*
@@ -25,10 +25,10 @@
   \endverse
 
   \beginverse
-    Úgy ^vágyom Uram, ünne^pelni Veled,
-    Meg^részegít a bor s a méz mit ^adsz nekem.
+    Úgy ^vágyom, Uram, ünne^pelni Veled,
+    Meg^részegít a bor s a méz, mit ^adsz nekem.
     Ha ^elfogadod minden ^kincsemet,
-    én ^átadom az ^életem Ti^éd le^gyen!
+    Én ^átadom az ^életem, Ti^éd le^gyen!
   \endverse
 
   \beginverse*
@@ -39,7 +39,7 @@
     Az ^Úr elé együtt ^indulunk,
     Ő ^mindig újra vár miránk, ha ^elbukunk.
     A ^nász idején ünne^peljetek,
-    Hisz ^itt a vőle^gény ki minket ^úgy sze^ret!
+    Hisz ^itt a vőle^gény, ki minket ^úgy sze^ret!
   \endverse
 
   \beginverse*
