--- a/songs/indulj-es-menj.tex
+++ b/songs/indulj-es-menj.tex
@@ -9,11 +9,8 @@
   \beginverse\memorize
     \[Em]Indulj és \[G]menj, \[D]hirdesd sza\[Em]vam,
     \[C]Népemhez \[D]küldelek \[Em]én! \[H7]
-  \endverse
-
-  \beginverse
-    ^Tövis és ^gaz, ^vér és pa^nasz,
-    ^Meddig hall^gassam még ^én?
+    \[Em]Tövis és \[G]gaz, \[D]vér és pa\[Em]nasz,
+    \[C]Meddig hall\[D]gassam még \[Em]én?
   \endverse
 
   \beginchorus
@@ -26,9 +23,6 @@
   \beginverse
     ^Tüzessé ^teszem ^ajkai^dat,
     ^Gyémánttá ^homloko^dat. ^
-  \endverse
-
-  \beginverse
     ^Népemnek ^őrévé ^rendellek ^én,
     ^Lelkemet ^adom mel^léd!
   \endverse
