--- a/songs/itt-vagyok-most-jo-uram.tex
+++ b/songs/itt-vagyok-most-jo-uram.tex
@@ -10,15 +10,15 @@
   \beginchorus
     Szeret\[Em7]lek, ó, U\[A7]ram, hálám \[D]szívemből fak\[G]ad, hiszen
     \[Em7]Mindent látsz Te ben\[A]nem, \[D]hatalmad olyan \[D7]nagy!
-    Szeret\[Em7]lek, ó, U\[A]ram, hálám \[D]szívemből fak\[G]ad
-    És \[D]ének\[Hm7]lem, hogy \[Em7]áldott \[A7]légy U\[D]ram!
+    Szeret\[Em7]lek, ó, U\[A]ram, hálám \[D]szívemből fak\[G]ad,
+    És \[D]ének\[Hm7]lem, hogy \[Em7]áldott \[A7]légy, U\[D]ram!
   \endchorus
 
   \beginverse
     ^Ismét térden állok én, s ^tudom, hogy hallgatsz rám.
     Bár ^sokszor hideg szavakat szól ^kopott és halk imám,
     De most ^el kell, hogy mondjam egy^szer, amit ^oly rég szeretn^ék,
-    Hogy ^szeretl^ek, a ^szívem ^csak ti^éd! ^
+    Hogy ^szeretl^ek, a ^szívem ^csak Ti^éd! ^
   \endverse
 
   \beginverse*
