--- a/songs/jezus-a-mi-oltalmunk.tex
+++ b/songs/jezus-a-mi-oltalmunk.tex
@@ -32,7 +32,7 @@
   \endverse
 
   \beginverse
-    ^Fogták, elí^télték ^és megfeszí^tették,
+    ^Fogták, elí^télték ^és megfeszí^tették
     ^Isten ^Fiát mi^helyet^tünk!
     ^Nincs már í^télet, ^vád sohasem ^érhet,
     ^Vé^re ^eltörölt ^minden ^bűnt!
