--- a/songs/ket-kezemben.tex
+++ b/songs/ket-kezemben.tex
@@ -13,7 +13,7 @@
   \fi
 
   \beginverse*
-    \[D]Két kezemben \[G]rejtem őri\[D]zem az éle\[Em]tem, \[G] minde\[D]nem. \[A]
+    \[D]Két kezemben \[G]rejtem, őri\[D]zem az éle\[Em]tem, \[G] minde\[D]nem. \[A]
     \[D]Két kezemben \[G]titkon van je\[D]len a végte\[Em]len \[G] kegye\[D]lem.
     \[G]Ő az erőm, \[A]reményem, hi\[D]tem, \[Hm]Tőle kapom minden szerete\[Em]tem. \[A]
     \[D]Föl nem fogom, de \[G]hiszem szünte\[D]len, itt vagy ve\[Em]lem, \[A] Iste\[G]nem. \[G] \[A]
