--- a/songs/kiraly-vagy.tex
+++ b/songs/kiraly-vagy.tex
@@ -1,12 +1,12 @@
 \beginsong{Király vagy}[]
 
-  \beginverse
-    /: \[D]Király vagy, Király vagy,
-    \[A]Király vagy, Király v\[Hm]agy.
-    \[Hm]Jézus Ki\[G]rály. :/ \rep{2}
+  \beginverse*
+    /: \[D]Király vagy, \echo{Király vagy}
+    \[A]Király vagy, \echo{Király v\[Hm]agy}
+    Jézus Ki\[G]rály. :/ \rep{2}
   \endverse
 
-  \beginverse
+  \beginverse*
     /: Most \[D]felemeljük a szívünket,
     Most \[A]felemeljük kezeinket,
     \[Hm]Trónod elé járulunk, imádva \[G]légy! :/ \rep{2}
