--- a/songs/lelkem-aldd-az-urat.tex
+++ b/songs/lelkem-aldd-az-urat.tex
@@ -27,10 +27,10 @@
   \endverse
 
   \beginverse
-    Ke^gyelmed ^nagy, és tü^relmed ^hosszú,
+    ^ Kegyelmed ^nagy, és tü^relmed ^hosszú,
     ^ Szerelmed ^mély, és az ^égig ^ér,
     Nem ^szűnök ^énekelni ^jósá^godról,
-    ^ Tízezer ^okom van, hogy ^zengjek ^még. ^ ^ ^
+    ^ Tízezer ^okom van, hogy ^zeng^jek ^még. ^ ^
   \endverse
 
   \beginverse*
@@ -39,9 +39,9 @@
 
   \beginverse
     ^ És egy nap ^majd ez a ^test el^gyengül,
-    ^ Erőm ^elhagy, s utam ^véget ér, ^
-    A ^lelkem ^mégis téged ^áld vég ^nélkül:
-    ^ Tízezer ^évig és mind^örök^ké! ^ ^ ^
+    ^ Erőm el^hagy, s utam ^véget ^ér,
+    A ^lelkem ^mégis Téged ^áld vég ^nélkül:
+    ^ Tízezer ^évig és mind^örö^kké! ^ ^ ^
   \endverse
 
   \beginverse*
