--- a/songs/mustarmag.tex
+++ b/songs/mustarmag.tex
@@ -1,4 +1,4 @@
-\beginsong{Mustármag - !spanyol!}[]
+\beginsong{Mustármag}[]
 
   \beginverse*
     /: Hogyha csak \[Am]mustármagnyi hitetek is \[E]volna...
@@ -16,7 +16,7 @@
   \endverse
 
   \beginverse*
-    /: \[Am]Jöjj el, jöjj el, ó \[E]jöjj el Szent\[Am]lélek! :/ \rep{4}
+    /: \[Am]Jöjj el, jöjj el, ó \[E]jöjj el, Szent\[Am]lélek! :/ \rep{4}
   \endverse
 
 \endsong
