--- a/songs/napfiver-holdnover.tex
+++ b/songs/napfiver-holdnover.tex
@@ -7,7 +7,7 @@
   \fi
 
   \beginverse\memorize
-    \[D]Fivérem \[F#m]Nap, és \[G]nő\[A]vérem \[D]Hold,
+    \[D]Fivérem \[F#m]Nap és \[G]nő\[A]vérem \[D]Hold,
     \[Hm]Oly' ritkán \[F#m]látlak, s \[G]hallom \[A]hango\[D]tok.
     \[Hm] Nyomaszt a \[F#m]sok \[G]gyötre\[A]lem és \[D]gond.
   \endverse
