--- a/songs/nezz-testver-fel.tex
+++ b/songs/nezz-testver-fel.tex
@@ -25,7 +25,7 @@
   \endverse
 
   \beginverse
-    ^Jöjjön, ki szomjas és i^gyék, aki ^hisz, ^élni ^fog!
+    ^Jöjjön, ki szomjas, és i^gyék, aki ^hisz, ^élni ^fog!
     ^Szívének rejtett mélyé^ből az élő ^víz ^felbu^zog.
   \endverse
 
