--- a/songs/o-az-ur.tex
+++ b/songs/o-az-ur.tex
@@ -13,7 +13,7 @@
   \endchorus
 
   \beginverse
-    Ő az ^Úr! \echo{Ő az Úr!} \echo{Ő az Úr!} Ő az ^Úr! \echo{Ő az Úr!}
+    Ő az ^Úr! \echo{Ő az Úr!} Ő az ^Úr! \echo{Ő az Úr!}
     Feltámadott a ha^lálból, Ő az ^Úr!
   \endverse
 
