--- a/songs/oly-jo-aldani.tex
+++ b/songs/oly-jo-aldani.tex
@@ -49,7 +49,7 @@
   % \fi
 
     \beginverse
-      ^Uram jó voltál énhozzám,
+      ^Uram, jó voltál énhozzám,
       Életemben nagy dolgokat műveltél sok év során.
     \endverse
 
@@ -63,7 +63,7 @@
   % \fi
 
   \beginverse
-    ^Hála di^cső^ség Ne^ved^nek, ^ ^ ^ ^
+    ^Hála, di^cső^ség Ne^ved^nek, ^ ^ ^ ^
     ^Most és ö^rök^ké az ^é^gen, a ^Föl^dön! A^men. ^ ^ ^ ^ \[A]
   \endverse
 
