--- a/songs/peter-ne-sirj.tex
+++ b/songs/peter-ne-sirj.tex
@@ -25,7 +25,7 @@
 
   \beginverse
     ^Reménytelen a bűn után az élet,
-    Hogy mégis élsz már alig ^hiszed ^el,
+    Hogy mégis élsz, már alig ^hiszed ^el,
     ^Alig hiszed, hogy nem lett akkor ^vége,
     Csak ^egyet tudsz, a ^hulló könnye^ket!
   \endverse
