--- a/songs/rejts-most-el.tex
+++ b/songs/rejts-most-el.tex
@@ -18,7 +18,7 @@
 
   \beginverse
     Csak ^Is^ten^ben bízz, ^én ^lel^kem!
-    ^Mert ^Ő ^él, ^nagyobb ^minden^nél!
+    ^Mert ^Ő ^él, és ^nagyobb ^minden^nél!
   \endverse
 
   \beginverse*
