--- a/songs/szentlelek-jojj.tex
+++ b/songs/szentlelek-jojj.tex
@@ -1,4 +1,4 @@
-\beginsong{Szentlélek jöjj}[]
+\beginsong{Szentlélek, jöjj}[]
 
   \versesep=12pt plus 3pt minus 12pt
 
@@ -9,14 +9,14 @@
   \fi
 
   \beginchorus\memorize
-    \[Em]Szentlélek jöjj, lobogó \[D]Láng!
-    Szentlélek jöjj, \[Hm]a világ \[Em]vár!
-    Szentlélek jöjj, viharos \[D]szél!
+    \[Em]Szentlélek, jöjj, lobogó \[D]Láng!
+    Szentlélek, jöjj, \[Hm]a világ \[Em]vár!
+    Szentlélek, jöjj, viharos \[D]szél!
     Jöjj, \[Hm]áradj \[Em]szét!
   \endchorus
 
   \beginverse
-    ^Jöjj el Élővíz for^rás,
+    ^Jöjj el, Élővíz for^rás,
     Jöjj, a szívünk ^Téged ^vár!
     Jöjj, ki fényt adsz lelkünk^nek,
     Jöjj, úgy ^várunk ^Rád!
@@ -27,7 +27,7 @@
   \endverse
 
   \beginverse
-    ^Jöjj igazság forrá^sa,
+    ^Jöjj, igazság forrá^sa,
     Jöjj, imádunk ^mindnyá^jan!
     Jöjj, reményünk éleszd ^fel,
     Jöjj ke^gyelmed^del!
