--- a/songs/terad-var-egy-szep-orszag.tex
+++ b/songs/terad-var-egy-szep-orszag.tex
@@ -37,11 +37,11 @@
   \endverse
 
   \beginverse
-    Add át ^néki az életed,
-    Add át ^néki az éle^ted,
+    Add át ^Néki az életed,
+    Add át ^Néki az éle^ted,
     Akkor Isten szép országát elnye^red, te is elnyered.
-    Add át ^néki az éle^ted,
-    Add át ^néki az éle^ted,
+    Add át ^Néki az éle^ted,
+    Add át ^Néki az éle^ted,
     Akkor ^Isten szép or^szágát elnye^red, te is ^elnye^red. \[A] \[E]
   \endverse
 
