--- a/songs/tied-a-dicsoseg.tex
+++ b/songs/tied-a-dicsoseg.tex
@@ -1,18 +1,21 @@
-\beginsong{Tied a dicsőség - !!}[]
+\beginsong{Tied a dicsőség}
+[
+  li={Kék könyv / 211.}
+]
 
   \beginverse\memorize
     /: Tied a di\[C]csőség és i\[Em]mádás,
-    Fele\[F]meljük keze\[Dm]inket, így di\[G]csérjük szent Ne\[G7]ved! :/ \rep{2}
+    Fele\[F]meljük keze\[Dm]inket, így di\[G]csérjük szent Nev\[G7]ed! :/ \rep{2}
   \endverse
 
   \beginchorus
     /: Ó Hatal\[C]mas, kezed nagy csodákat \[Am]tesz,
-    Veled senki nem ér \[F]fel, \[Dm] Veled \[G]senki nem ér \[G7]fel! :/
+    Veled senki nem ér \[F]fel, \[Dm] Veled \[G]senki nem ér \[G7]fel! :/ \rep{2}
   \endchorus
 
   \beginverse\memorize
     /: Tied a di^csőség és i^mádás,
-    Fela^jánljuk a szí^vünket, így di^csérjük szent Neved! ^ :/ \rep{2}
+    Fela^jánljuk a szí^vünket, így di^csérjük szent Nev^ed! :/ \rep{2}
   \endverse
 
   \beginverse*
