--- a/songs/tied-vagyunk.tex
+++ b/songs/tied-vagyunk.tex
@@ -1,15 +1,15 @@
-\beginsong{Tied vagyunk - !!}[]
+\beginsong{Tied vagyunk}[]
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: TODO}
+      {\nolyrics Előjáték: \[Hm] \[E] \[A] \[D] \[G] \[A] \[Hm]}
     \endverse
   \fi
 
   \beginverse*
     /: A \[Hm]föld és az \[E]ég \[A]asztalunknál \[D]összeér,
     \[G] Értünk lett \[A]élet ez a \[D]bor és a \[Hm]kenyér!
-    \[G]Őálta\[A]la, Őve\[D]le, Őben\[Hm]ne
+    \[G] Őálta\[A]la, Őve\[D]le, Őben\[Hm]ne
     Tied va\[A]gyunk, Tied va\[G]gyunk,
     Tied va\[A]gyunk, Tied va\[Hm]gyunk! :/ \rep{2}
   \endverse
