--- a/songs/varj-es-ne-felj.tex
+++ b/songs/varj-es-ne-felj.tex
@@ -1,4 +1,4 @@
-\beginsong{Várj, és ne félj}[]
+\beginsong{Várj és ne félj}[]
 
   \beginverse*
     \[Em]Várj és ne \[C]félj, az \[Am6]Úr jön \[H7]már!
