--- a/songs/vizek-felett.tex
+++ b/songs/vizek-felett.tex
@@ -16,7 +16,7 @@
 
   \beginchorus
     \[G] Nagy ne\[D]ved hívom \[A]én \[A4] \[G] és felné\[D]zek a vizek fö\[A]lé.
-    Ott látlak \[G]én. A lelkem \[D]benned megpi\[A]hen. Enyém \[G]vagy és \[A]én \[Hm]tied.
+    Ott látlak \[G]én. A lelkem \[D]benned megpi\[A]hen. Enyém \[G]vagy és \[A]én \[Hm]Tied.
   \endchorus
 
   \beginverse
@@ -35,9 +35,9 @@
   \fi
 
   \beginverse*
-    /: \[Hm] Lélek add, hogy benned \[G]teljesen megbízzak
-    A vízen \[D]bátran veled járjak, és \[A]bárhová hívsz, menjek!
-    \[Hm] Vigyél tovább, mint a \[G]lábam tudna menni
+    /: \[Hm] Lélek add, hogy Benned \[G]teljesen megbízzak,
+    A vízen \[D]bátran Veled járjak, és \[A]bárhová hívsz, menjek!
+    \[Hm] Vigyél tovább, mint a \[G]lábam tudna menni,
     Taníts \[D]teljes hittel járni, jelen\[A]létedben élni! :/ \rep{3}
   \endverse
 
@@ -46,7 +46,7 @@
   \endverse
 
   \beginverse*
-    Enyém \[G]vagy és \[A]én \[Hm]tied. Enyém \[G]vagy és \[A]én \[D]tied.
+    Enyém \[G]vagy és \[A]én \[Hm]Tied. Enyém \[G]vagy és \[A]én \[D]Tied.
   \endverse
 
 \endsong
