--- a/songs-extra/hala-neked-istenunk.tex
+++ b/songs-extra/hala-neked-istenunk.tex
@@ -1,7 +1,7 @@
-\beginsong{Hála Néked, Istenünk - !!}[]
+\beginsong{Hála Néked, Istenünk}[]
 
   \beginverse*\memorize
-    \[G]Hála Néked, \[C]Istenünk, \[G]hála néked \[D]………… -ért!
+    \[G]Hála Néked, \[C]Istenünk, \[G]hála Néked \[D]\_\_\_\_\_ -ért!
     \[G]Hála Néked, \[C]Istenünk, mert \[G]ő fon\[D]tos ne\[G]künk! \[D] \[G]
   \endverse
 
@@ -11,7 +11,7 @@
   \endverse
 
   \beginverse*
-    Pamparararam \[D]pam \[G]pam paramparampampam. \[G]
+    Pam-parararam \[D]pam \[G]pam param-param-pam-pam. \[G]
   \endverse
 
 \endsong
