--- a/songs/ave-maria.tex
+++ b/songs/ave-maria.tex
@@ -1,15 +1,15 @@
-\beginsong{Ave Maria - !!}[]
+\beginsong{Ave Maria}[]
 
   \beginchorus
     \[G]A\[D]ve Ma\[C]ri\[D]a, \[G]gra\[Am]tia \[C]ple\[D]na,
-    \[G]Domi\[Am]nus \[D]te\[C]cum, \[C]bene\[D]dicta \[G]tu.
+    \[G]Domi\[Am]nus \[D]te\[G]cum \[C]bene\[D]dicta \[G]tu.
   \endchorus
 
   \beginverse\memorize
     \[G]Jézus, \[D]nékünk \[C]adtál a\[D]nyát,
     Ő \[G]kér és \[Hm]áld, ha \[C]szívünk \[D]fáj.
     \[G]Hála Jé\[Am]zus, \[D]hála Né\[G]ked,
-    Mert \[C]van egy \[D]drága i\[G]mánk! \[D] \[G]
+    Mert \[C]van egy \[D]drága i\[G]mánk!
   \endverse
 
   \beginverse*
@@ -20,7 +20,7 @@
     ^Térden ^állva ^hívunk Té^ged,
     ^Vidd el ^álmunk ^Krisztus e^lé!
     ^Jézus any^ja, ^hű Mári^a,
-    Ó ^add, hogy ^lássuk Fi^ad! ^ ^
+    Ó ^add, hogy ^lássuk Fi^ad!
   \endverse
 
   \beginverse*
