--- a/songs/gyertek-dicserjuk-egyutt.tex
+++ b/songs/gyertek-dicserjuk-egyutt.tex
@@ -1,4 +1,4 @@
-\beginsong{Gyertek, dicsérjük együtt - !!}[]
+\beginsong{Gyertek, dicsérjük együtt}[]
 
   \ifchorded
     \beginverse*
@@ -6,20 +6,20 @@
     \endverse
   \fi
 
-  \beginverse\memorize
+  \beginverse*\memorize
     /: \[E]Gyertek, dicsérjük \[E7]együtt Izrael \[F]Szentjét,
-    mert Ő a \[E]Meg\[Dm]vál\[E]tó! :/ \rep{2}
+    Mert Ő a \[E]Meg\[Dm]vál\[E]tó! :/ \rep{2}
   \endverse
 
-  \beginverse
+  \beginverse*
      /: \[E]Emeld fel kezedet, \[Dm]nyisd meg a szívedet,
-    mert Ő a te sza\[E]ba\[Dm]dí\[E]tód! :/ \rep{2}
+    Mert Ő a te Sza\[E]ba\[Dm]dí\[E]tód! :/ \rep{2}
   \endverse
 
-  \beginverse
+  \beginverse*
     \[Am]Gyertek, gyertek, menjünk fel az Úr hegyére, vígasságnak a helyére,
-    \[Dm]ujjongjunk Őelőtte, táncoljunk Őelőtte,
-    az \[E]Ő neve, az Ő neve: Ott lakik az \[Am]Úr!
+    \[Dm]Ujjongjunk Őelőtte, táncoljunk Őelőtte,
+    Az \[E]Ő neve, az Ő neve: Ott lakik az \[Am]Úr!
   \endverse
 
 \endsong
