--- a/songs/ime-az-isten-satora.tex
+++ b/songs/ime-az-isten-satora.tex
@@ -1,31 +1,24 @@
-\beginsong{Ímé, az Isten sátora - !!}[]
-
-  \transpose{-3}
+\beginsong{Ímé, az Isten sátora}[]
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[Gm] \[F] \[Gm] \[Dm] \[Gm]}
+      {\nolyrics Előjáték: \[Em] \[D] \[Em] \[Hm] \[Em]}
     \endverse
   \fi
 
   \beginverse\memorize
-    \[Gm]Ímé, az Isten \[Dm]sátora az \[Gm]emberekkel \[Dm]van,
-    és \[Gm]maga az Isten \[F]lesz velük, az \[A#]ő Iste\[D]nük. \[D4] \[D?]
+    \[Em]Ímé, az Isten \[Hm]sátora az \[Em]emberekkel \[Hm]van,
+    \[Em]Maga az Isten \[D]lesz velük, az \[G]ő Iste\[H]nük. \[H7]
   \endverse
 
   \beginchorus
-    /: \[Gm]Jézus, Te \[F]vagy a Király!
-    \[Gm]Jézus, Te \[F]vagy a \[Gm]Király! \[Gm] \[F] \[Gm] \[Dm] \[Gm] :/ \rep{2}
+    /: \[Em]Jézus, Te \[D]vagy a Király!
+    \[Em]Jézus, Te \[D]vagy a Ki\[Em]rály! :/ \rep{2} \[Hm]
   \endchorus
-
-  \beginverse*
-    Refrén
-  \endverse
 
   \beginverse
     ^Isten letörli a ^könnyeket az ^ő szemeik^ről.
-    ^Halál nem lesz már ^többé,
-    sem ^gyász, sem fájda^lom. ^ ^
+    ^Halál nem lesz már ^többé, sem ^gyász, sem fájda^lom. ^
   \endverse
 
   \beginverse*
@@ -33,13 +26,12 @@
   \endverse
 
   \beginverse
-    Ki ^győz örökségül ^nyer mindent,
-    szí^vébe írom Ne^vem.
-    ^Annak Iste^ne leszek, s fi^am lesz ő né^kem. ^ ^
+    Ki ^győz, örökségül ^nyer mindent, szí^vébe írom ne^vem,
+    ^Annak Iste^ne leszek, s fi^am lesz ő né^kem. ^
   \endverse
 
   \beginverse*
-    Refrén
+    Refrén \rep{2}
   \endverse
 
 \endsong
