--- a/songs/jo-az-urban-bizakodni.tex
+++ b/songs/jo-az-urban-bizakodni.tex
@@ -2,7 +2,7 @@
 
   \beginverse*
     \[Dm]Jó az Úrban \[A]bizakodni, \[Dm]j\[C]ó az \[F]Úr.
-    \[Gm]Re\[C]mélj, és \[F]bízz \[C]ben\[Dm]ne, \[A#]j\[C]ó az \[Dm]Úr!
+    \[Gm]Re\[C]mélj, és \[F]bízz \[C]Ben\[Dm]ne, \[A#]j\[C]ó az \[Dm]Úr!
   \endverse
 
 \endsong
