--- a/songs/koszonom-jezus.tex
+++ b/songs/koszonom-jezus.tex
@@ -1,31 +1,31 @@
-\beginsong{Köszönöm Jézus}[]
+\beginsong{Köszönöm, Jézus}[]
 
   \beginverse\memorize
-    \[D] Köszönöm Jézus, köszönöm Jézus,
-    Köszönöm U\[G]ram, hogy szeretsz en\[D]gem!
-    Köszönöm \[F#m]Jézus, köszönöm \[Hm]Jé\[G]zus,
-    Köszönöm U\[D]ram, \[A] hogy szeretsz en\[D]gem! \[G] \[D]
+    \[D] Köszönöm, Jézus, köszönöm, Jézus,
+    Köszönöm, U\[G]ram, hogy szeretsz en\[D]gem!
+    Köszönöm, \[F#m]Jézus, köszönöm, \[Hm]Jé\[G]zus,
+    Köszönöm, U\[D]ram, \[A] hogy szeretsz en\[D]gem! \[G] \[D]
   \endverse
 
   \beginverse
-    ^ A Golgotára ment, és meghalt értem
-    Köszönöm U^ram, hogy szeretsz en^gem!
-    A Golgo^tára ment, és meghalt ^ér^tem
-    Köszönöm U^ram, ^ hogy szeretsz en^gem! ^ ^
+    ^ A Golgotára ment, és meghalt értem;
+    Köszönöm, U^ram, hogy szeretsz en^gem!
+    A Golgo^tára ment, és meghalt ^ér^tem;
+    Köszönöm, U^ram, ^ hogy szeretsz en^gem! ^ ^
   \endverse
 
   \beginverse
-    ^ A harmadik napon, Ő feltámadott
-    Köszönöm U^ram, hogy szeretsz en^gem!
-    A harma^dik napon, Ő fel^táma^dott
-    Köszönöm U^ram, ^ hogy szeretsz en^gem! ^ ^
+    ^ A harmadik napon Ő feltámadott;
+    Köszönöm, U^ram, hogy szeretsz en^gem!
+    A harma^dik napon Ő fel^táma^dott;
+    Köszönöm, U^ram, ^ hogy szeretsz en^gem! ^ ^
   \endverse
 
   \beginverse
-    ^ Ó alleluja, ó alleluja
-    Köszönöm U^ram, hogy szeretsz en^gem!
-    Ó alle^luja, ó alle^lu^ja
-    Köszönöm U^ram, ^ hogy szeretsz en^gem! ^ ^
+    ^ Ó, alleluja, ó, alleluja!
+    Köszönöm, U^ram, hogy szeretsz en^gem!
+    Ó, alle^luja, ó, alle^lu^ja!
+    Köszönöm, U^ram, ^ hogy szeretsz en^gem! ^ ^
   \endverse
 
 \endsong
