--- a/songs/mert-tudom.tex
+++ b/songs/mert-tudom.tex
@@ -1,27 +1,18 @@
-\beginsong{Mert tudom - !!}[]
+\beginsong{Mert tudom}[]
 
-  \beginverse\memorize
+  \beginverse*\memorize
     Mert tu\[D]dom, semmi \[G]nem szakaszthat \[D]el az én \[G]Uram szerelmé\[D]től.
     Sem élet, sem ha\[G]lál nem választ \[D]el, sem \[G]ma, sem \[D]holnap.
   \endverse
 
   \beginchorus
     Mert az \[D]angyalok \[G]visznek Őhoz\[D]zá,
-    s a po\[F#m]kol e\[Hm]rői sem \[G]állítnak \[A]meg. \[A4] \[A]
+    S a po\[F#m]kol e\[Hm]rői sem \[G]állítnak \[A]meg. \[A4] \[A]
     Nem \[G]számít, ha hegyte\[D]tőn állok meg, vagy a \[Hm]sík ten\[G]ger part\[A]ján,
     Mert az \[D]Úr alkotta \[Hm]mindezt, és \[G]minden az Ö\[A]vé.
   \endchorus
 
-  \beginverse
-    És tu^dom, semmi ^nem szakaszthat ^el az én ^Uram szerelmé^től.
-    Sem élet, sem ha^lál nem választ ^el, sem ^ma, sem ^holnap.
-  \endverse
-
   \beginverse*
-    Refrén
-  \endverse
-
-  \beginverse
     És tu^dom, semmi ^nem szakaszthat ^el az én ^Uram szerelmé^től.
   \endverse
 
