--- a/songs/ne-felj-mert-megvaltottalak.tex
+++ b/songs/ne-felj-mert-megvaltottalak.tex
@@ -8,7 +8,7 @@
   \endchorus
 
   \beginverse\memorize
-    \[A]Viruló réteken \[D]át, \[G]hűs forrás fe\[A]lé vezetlek,
+    \[A]Viruló réteken \[D]át \[G]hűs forrás fe\[A]lé vezetlek,
     \[Hm]Pásztorod va\[Em]gyok, elveszni \[A]senkit nem ha\[D]gyok.
     Karom fe\[Hm]léd tá\[Em]rom, kiárad \[G]áldá\[D]som.
     \[Hm]Nem rejtőzöm \[Em]el, szívem a \[A]szívednek fe\[D]lel,
