--- a/songs.tex
+++ b/songs.tex
@@ -7,6 +7,7 @@
 \input{songs/alleluja.tex}
 \input{songs/almaimbol-lelkembol.tex}
 \input{songs/antioch-dal.tex}
+\input{songs/apokrif-ima.tex}
 \input{songs/aroni-aldas.tex}
 \input{songs/atya-teremto.tex}
 \input{songs/atyam-ket-kezedben.tex}
@@ -19,12 +20,12 @@
 \input{songs/ebredj-ember.tex}
 \input{songs/egyutt-fog-ujjongni.tex}
 \input{songs/en-uram-en-istenem.tex}
+\input{songs/esti-hala.tex}
 \input{songs/feny-ami-bennem-eg.tex}
 \input{songs/foltamadt-alleluja.tex}
 \input{songs/gyertek-dicserjuk-egyutt.tex}
 \input{songs/ha-jon-az-ur.tex}
-\input{songs/halat-adok-az-esti-oran.tex}
-\input{songs/halat-adok-hogy-itt-a-reggel.tex}
+\input{songs/hazamegy-a-vandor.tex}
 \input{songs/hus-ver-templom.tex}
 \input{songs/im-itt-jon-o.tex}
 \input{songs/ime-az-isten-satora.tex}
@@ -67,6 +68,7 @@
 \input{songs/o-az-ur.tex}
 \input{songs/peter-ne-sirj.tex}
 \input{songs/rajta-dicserjetek-az-ur-nevet.tex}
+\input{songs/reggeli-hala.tex}
 \input{songs/rejts-most-el.tex}
 \input{songs/sotet-fenn-az-eg.tex}
 \input{songs/szentlelek-jojj.tex}
