--- a/songs/esti-hala.tex
+++ b/songs/esti-hala.tex
@@ -1,6 +1,6 @@
-\beginsong{Hálát adok az esti órán}
+\beginsong{Esti hála}
 [
-  index={Esti ima}
+  index={Hálát adok az esti órán}
 ]
 
   % / jelek után: https://www.youtube.com/watch?v=ggrTwNKP5Ew
