--- a/songs/indulj-a-vilagba.tex
+++ b/songs/indulj-a-vilagba.tex
@@ -14,7 +14,7 @@
   \endverse
 
   \beginchorus
-    \[G]Indulj a világba s \[D]menjél bármerre:
+    \[G]Indulj a világba, s \[D]menjél bármerre:
     \[A]magas havasokba, s a kék \[D]tengerre,
     \[G]Indulj a világba, az \[D]Úr van teveled,
     \[A]Indulj hát és építsd a kö\[D]zös\[A]sé\[D]get!
