--- a/songs/lelkem-aldd-az-urat.tex
+++ b/songs/lelkem-aldd-az-urat.tex
@@ -12,7 +12,7 @@
     Lelkem, \[G]áldd az Ur\[D]at, \[A/C#]áldd az U\[Hm]rat,
     \[G]Egyedül \[D]Őt im\[A4]ádd! \[A]
     Zengj úgy, \[G]mint soha \[Hm]még, \[G]Őt \[A]di\[Hm]csérd!
-    L\[G]elkem csak T\[A]éged \[G/D]áld! \[D] \[G/D] \[D]
+    A l\[G]elkem csak T\[A]éged \[G/D]áld! \[D] \[G/D] \[D]
   \endchorus
 
   \beginverse\memorize
