--- a/songs/nincs-mas-isten.tex
+++ b/songs/nincs-mas-isten.tex
@@ -28,6 +28,12 @@
     \[Em]Te vagy az Isten, \[C]aki nevére \[G]leborul minden a \[D]Földön, az égen,
     \[Em]Szíveket hódít, \[C]sebeket gyógyít az \[G]Úr ma i\[D]s!
 
+    \ifchorded
+      \vspace{0.3cm}
+      {\nolyrics Közjáték: /: \[Em7] \[Cadd2] \[G] \[D/F#] :/ \rep{2}}
+      \vspace{0.3cm}
+    \fi
+
     /: \[Em] És hogyha Isten velünk, \[C] ember mit árthat nekünk,
     \[G] Mert hogyha Te vagy velünk, \[D] ki lehet ellenünk? :/ \rep{2}
   \endchorus
