--- a/songs/reggeli-hala.tex
+++ b/songs/reggeli-hala.tex
@@ -1,6 +1,6 @@
-\beginsong{Hálát adok, hogy itt a reggel}
+\beginsong{Reggeli hála}
 [
-  index={Reggeli ima}
+  index={Hálát adok, hogy itt a reggel}
 ]
 
   \beginverse\memorize
