--- a/songs/indulj-es-menj.tex
+++ b/songs/indulj-es-menj.tex
@@ -14,10 +14,8 @@
   \endverse
 
   \beginchorus
-    \[G]Küldelek \[D]én, s \[H7]megáldlak \[Em]én,
-    Csak \[C]menj és \[D]hirdesd sza\[Em]vam! \[H7]
-    \[G]Küldelek \[D]én, s \[H7]megáldlak \[Em]én,
-    Csak \[C]menj és \[D]hirdesd sza\[Em]vam!
+    /: \[G]Küldelek \[D]én, \[H7]megáldlak \[Em]én,
+    Csak \[C]menj és \[D]hirdesd sza\[Em]vam! :/ \rep{2} \[H7]
   \endchorus
 
   \beginverse
