Added chords and started adding melismas

--- a/songs/adjunk-halat.tex
+++ b/songs/adjunk-halat.tex
@@ -9,7 +9,7 @@
   \fi
 
   \beginverse\memorize
-    Adjunk \[C]há\[G]lát az \[C]Úr\[G]nak,
+    Adjunk \[C]h\underline{á}\[G]lát az \[C]\underline{Ú}r\[G]nak,
     Aki \[Em]meghalt \[Am]és fel\[D]támadt
     Ő a \[C]mennybe \[G]ment és a \[C]trónon \[G]ül,
     Onnan \[Em]várjuk, \[Am]míg el\[D]jő.
@@ -23,7 +23,7 @@
   \endchorus
 
   \beginverse
-    Az Ő ^tes^te és ^vé^re
+    Az Ő ^t\underline{e}s^te és ^v\underline{é}^re
     Táplál ^minket ^itt a ^Földön,
     Gyere ^és ö^rülj, velünk ^ünne^pelj,
     Tiszta ^szívvel ^áldjuk ^Őt!
@@ -36,8 +36,8 @@
   \beginverse
     Aki ^benne ^hisz, sose ^szomja^zik,
     Ő az ^élő ^víz fo^rrása.
-    Szent^lélek, ^jöjj és ^szállj le ^ránk,
-    Tölts be ^minket ^szeretet! ^
+    Szent^l\underline{é}lek, ^jöjj és ^szállj le ^ránk,
+    Tölts be ^minket ^Szeretet! ^
   \endverse
 
   \beginverse*
