--- a/songs/hazamegy-a-vandor.tex
+++ b/songs/hazamegy-a-vandor.tex
@@ -3,22 +3,18 @@
   by={Pintér Béla}
 ]
 
-  \beginverse*
-    TODO: Akkordok
-  \endverse
-
   \beginverse
-    Ami ezen a földön körbevesz, az olyan nekem, mint egy múló álom.
-    Nemrég kezdődött, máris vége lesz, ha a nap felkel a láthatáron.
-    Nincs itt maradandó városom, a szívem azt az új világot várja.
-    És összehajtom majd a vánkosom, ha a hajnal rámtalál.
+    \[H] Ami ezen a földön \[C#m]körbevesz, \[F#] az olyan nekem, mint egy \[H]múló álom.
+    \[G#m] Nemrég kezdődött, máris \[E]vége lesz, ha a \[F#]nap felkel a láthatáron.
+    \[H] Nincs itt maradandó \[C#m]városom, \[F#] a szívem azt az \[H]új világot várja.
+    \[G#m] És összehajtom majd a \[E]vánkosom, ha a \[F#]hajnal rámtalál.
   \endverse
 
   \beginchorus
-    Hazamegy a vándor, erről álmodott ő százszor.
-    Arra tette fel az életét, hogy egy szépnapon majd célba ér.
-    Hazamegy a vándor, eltűnik, mint a kámfor.
-    Mintha soha nem lett volna itt, egy szempillantás és megérkezik.
+    Hazamegy a \[H]vándor, erről álmodott ő \[G#m] százszor.
+    Arra tette fel az \[E]életét, hogy egy \[G#m]szép napon majd \[F#sus4]célba ér. \[F#]
+    Hazamegy a \[H]vándor, eltűnik, mint a \[G#m] kámfor.
+    Mintha soha nem lett \[E]volna itt, egy szempillantás és meg\[H]érkezik. \[F#]
   \endchorus
 
   \beginverse*
@@ -30,14 +26,14 @@
   \endverse
 
   \beginverse*
-    Mert új eget, és egy új földet várunk,
-    Új folyókban úszunk majd, és új hegyeket mászunk.
-    Ez a bolygó nem az igazi világunk.
-    Itt csak utazunk, átutazunk.
+    Mert \[E]új eget, és egy új \[G#m]földet \[F#]várunk,
+    \[E]Új folyókban úszunk majd, és \[G#m]új hegyeket \[F#]mászunk.
+    \[E] Ez a bolygó nem az \[G#m]igazi vi\[F#]lágunk.
+    Itt csak \[E]utazunk, át\[F#]utazunk.
   \endverse
 
   \beginverse*
-    Refrén \rep{2}
+    Refrén \rep{2} \[H]
   \endverse
 
 \endsong
