--- a/songs/apokrif-ima.tex
+++ b/songs/apokrif-ima.tex
@@ -1,28 +1,30 @@
-\beginsong{Apokrif ima}[]
+\beginsong{Apokrif ima - !!}[]
 
-  \beginverse*
-    TODO: Akkordok
-  \endverse
+  \ifchorded
+    \beginverse*
+      {\nolyrics Előjáték: \[D] \[D#] \[Em] \[A6] \[A7]}
+    \endverse
+  \fi
 
   \beginverse\memorize
-    Oldani Uram, s oldódni vágyom,
-    Üdvözíteni, és üdvözülni vágyom,
-    Alkotni Uram, s alakulni vágyom,
-    Alkotni Uram, s alakulni vágyom.
+    \[D]Oldani Uram, s oldódni \[A]vágyom,
+    \[A7]Üdvözíteni, és üdvözülni \[D]vágyom,
+    \[G] Alkotni \[D]Uram, \[A7] s alakulni \[D]vágyom,
+    \[Em] Alkotni \[A6]Uram, \[A7] s alakulni \[D]vágyom.
   \endverse
 
   \beginverse
-    Ékesíteni, és ékeskedni vágyom,
-    Dalolni Uram, és dallá lenni vágyom,
-    Követeddé lenni s Érted tenni vágyom,
-    Követeddé lenni s Érted tenni vágyom.
+    ^Ékesíteni, és ékeskedni ^vágyom,
+    ^Dalolni Uram, és dallá lenni ^vágyom,
+    ^ Követeddé ^lenni ^ s Érted tenni ^vágyom,
+    ^ Követeddé ^lenni ^ s Érted tenni ^vágyom.
   \endverse
 
   \beginverse
-    Lámpád vagyok, ha látsz engem,
-    Ajtód vagyok, ha zörgetsz bennem,
-    Ki látod mit teszek, hallgass el engem,
-    Ki látod mit teszek, hallgass el engem.
+    ^Lámpád vagyok, ha látsz en^gem,
+    ^Ajtód vagyok, ha zörgetsz ^bennem,
+    ^ Ki látod ^mit teszek, ^ hallgass el ^engem,
+    ^ Ki látod ^mit teszek, ^ hallgass el ^engem.
   \endverse
 
 \endsong
