--- a/songs/aldjatok-az-urat.tex
+++ b/songs/aldjatok-az-urat.tex
@@ -2,7 +2,7 @@
 
   \beginverse*
     /: \[Em]Áldjátok az Ur\[Am]at, áldjátok szent ne\[Em]vét,
-    Kik \[Em]házában álltok \[D]napról n\underline{a}pra, \[Hm]dicsérjétek szüntelen \[Em]Őt! :/ \rep{2}
+    Kik \[Em]házában álltok \[D]napról n\_{a}pra, \[Hm]dicsérjétek szüntelen \[Em]Őt! :/ \rep{2}
   \endverse
 
   \beginverse*
