--- a/songs-extra/jo-atyank-koszonjuk-neked.tex
+++ b/songs-extra/jo-atyank-koszonjuk-neked.tex
@@ -7,7 +7,7 @@
   \fi
 
   \beginverse*\memorize
-    \[D]Jó Atyánk, köszönjük Néked \[G]\_\_\_\_\_-t,
+    \[D]Jó Atyánk, köszönjük Néked \[G]_____-t,
     Szívünkbe zártuk, \[D]hála \[D4]érte! \[D] \[D2]
   \endverse
 
@@ -28,7 +28,7 @@
   \endverse
 
   \beginverse*
-    ^Szereteted fénye, á^ldása érje ^\_\_\_\_\_ -t!
+    ^Szereteted fénye, á^ldása érje ^_____ -t!
     Legyen a ^Lelked véle! \[E]Alle\[A]lu\[E]ja!
   \endverse
 
