Made some of the requested modifications

--- a/songs-extra/jo-atyank-koszonjuk-neked.tex
+++ b/songs-extra/jo-atyank-koszonjuk-neked.tex
@@ -12,8 +12,8 @@
   \endverse
 
   \beginverse*
-    ^Áldj meg minket, Krisztusunk, a  ^Lelked legyen
-    Közöttünk míg ^együtt ^vagyunk! ^ ^
+    ^Áldj meg minket, Krisztusunk,
+    a ^Lelked legyen közöttünk míg ^együtt ^vagyunk! ^ ^
   \endverse
 
   \ifchorded
@@ -23,8 +23,8 @@
   \fi
 
   \beginverse*\memorize
-    \[E]Ó, Urunk, mi \[A]egyet aka\[E]runk, kik
-    Ebben a dalban \[H7]együtt vagyunk:
+    \[E]Ó, Urunk, mi \[A]egyet aka\[E]runk,
+    Kik ebben a dalban \[H7]együtt vagyunk:
   \endverse
 
   \beginverse*
