--- a/songs/feny-ami-bennem-eg.tex
+++ b/songs/feny-ami-bennem-eg.tex
@@ -29,13 +29,18 @@
     Budaörs minden sarkában...
     A Szent Imre minden sarkában...
     A Szent Ferenc minden sarkában...
-    Szentendre minden sarkában...
+    % Szentendre minden sarkában...
     Fehérvár minden sarában...
+    Dombóvár minden sarkában...
+    Halásztelek minden sarkában...
     Kanizsa minden sarkában...
     Szeged minden sarkában...
     Kaposvár minden sarkában...
     Pécs minden sarkában...
+    Siófok minden sarkában...
+    Kecskemét minden sarkában...
     Sopron minden sarkában...
+    Baja minden sarkában...
     Sydney minden sarkában...
   \endverse
 
