--- a/songs/jojj-itt-az-ido.tex
+++ b/songs/jojj-itt-az-ido.tex
@@ -9,11 +9,8 @@
   \beginverse\memorize
     \[D]Jöjj, itt az idő, hogy \[D4]éb\[D]redj!
     \[A]Jöjj, itt az idő, hogy \[Em]áld\[F#m]juk \[G]Őt!
-  \endverse
-
-  \beginverse
-    ^Jöjj, szívedet add az ^Úr^nak!
-    ^Jöjj, imádd az Istent ^úgy, ^ahogy ^vagy!
+    \[D]Jöjj, szívedet add az \[D4]Úr\[D]nak!
+    \[A]Jöjj, imádd az Istent \[Em]úgy, \[F#m]ahogy \[G]vagy!
   \endverse
 
   \beginverse*
@@ -27,10 +24,6 @@
 
   \beginverse*
     1. versszak
-  \endverse
-  
-  \beginverse*
-    2. versszak
   \endverse
 
   \beginverse*
