--- a/songs/kesz-az-en-szivem.tex
+++ b/songs/kesz-az-en-szivem.tex
@@ -8,7 +8,7 @@
 
   \beginverse\memorize
     Kész az \[Dm]én szívem, Uram, \[Gm]Néked zeng a \[Dm]dalom.
-    Elő hát hárfa, lant, hadd kel\[C]tsem a haj\[A]nalt! \[A4] \[A]
+    Elő hát hárfa, lant, hadd kel\[C]tsem fel a haj\[A]nalt! \[A4] \[A]
   \endverse
 
   \beginchorus
