--- a/songs/melybol-hozzad-szall-szavam.tex
+++ b/songs/melybol-hozzad-szall-szavam.tex
@@ -1,4 +1,4 @@
-\beginsong{Mélyből Hozzád száll szavam}[]
+\beginsong{A mélyből Hozzád száll szavam}[]
 
   \versesep=12pt plus 3pt minus 9pt
 
@@ -16,19 +16,19 @@
   \beginchorus
     \[Em!]Segíts! \echo{Segíts!} \[Am!]Ne hagyj! \echo{Ne hagyj!}
     \[Em]Nézd, \[H7]ránk tör \[Em]a bűn már!
-    \[Em!]Te adj! \echo{Te adj!} \[Am!]Erőt! \echo{Erőt!}
+    \[Em!]Te adj \echo{Te adj} \[Am!]erőt! \echo{erőt!}
     \[G]Uram, \[H7]irgal\[Em]mazz!
   \endchorus
 
   \beginverse
-    Ha ^ajkam ^vétett ^Elle^ned, ^Krisztus, ^kegyel^mezz!
+    Ha ^ajkam ^vétett ^elle^ned, ^Krisztus, ^kegyel^mezz!
     A ^jóhírt ^zengjem ^csak Ve^led, ^Krisztus, ^kegyel^mezz!
   \endverse
 
   \beginchorus
     \[Em!]Segíts! \echo{Segíts!} \[Am!]Ne hagyj! \echo{Ne hagyj!}
     \[Em]Nézd, \[H7]ránk tör \[Em]a bűn már!
-    \[Em!]Te adj! \echo{Te adj!} \[Am!]Erőt! \echo{Erőt!}
+    \[Em!]Te adj \echo{Te adj} \[Am!]erőt! \echo{erőt!}
     \[G]Krisztus, \[H7]kegyel\[Em]mezz!
   \endchorus
 
@@ -40,7 +40,7 @@
   \beginchorus
     \[Em!]Segíts! \echo{Segíts!} \[Am!]Ne hagyj! \echo{Ne hagyj!}
     \[Em]Nézd, \[H7]ránk tör \[Em]a bűn már!
-    \[Em!]Te adj! \echo{Te adj!} \[Am!]Erőt! \echo{Erőt!}
+    \[Em!]Te adj \echo{Te adj} \[Am!]erőt! \echo{erőt!}
     \[G]Uram, \[H7]irgal\[Em]mazz!
   \endchorus
 
