--- a/songs/tancolj-az-urnak.tex
+++ b/songs/tancolj-az-urnak.tex
@@ -24,7 +24,7 @@
   \beginverse
     Mint ^Mária ^Erzsébet ^házá^ban,
     ^Ujjong a ^bensőm ^há^lá^val.
-    A ^Lélek ^szívemet ^eltöl^ti,
+    A ^Lélek a ^szívemet ^eltöl^ti,
     ^Alle^luja, ^így ^zen^gi!
   \endverse
 
