--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -73,7 +73,7 @@
 
   \versesep=12pt plus 3pt minus 5pt
 
-  \songsection{Antiochiás énekek}
+  % \songsection{Antiochiás énekek}
   \begin{songs}{titleidx}
     \input{songs.tex}
   \end{songs}
