--- a/songs/feny-ami-bennem-eg.tex
+++ b/songs/feny-ami-bennem-eg.tex
@@ -30,7 +30,7 @@
     A Szent Imre minden sarkában...
     A Szent Ferenc minden sarkában...
     % Szentendre minden sarkában...
-    Fehérvár minden sarában...
+    Fehérvár minden sarkában...
     Dombóvár minden sarkában...
     Halásztelek minden sarkában...
     Kanizsa minden sarkában...
