--- a/songs/add-tovabb.tex
+++ b/songs/add-tovabb.tex
@@ -11,7 +11,7 @@
 
   \beginverse\memorize
     Nagy \[D]tűz, hatalmas \[F#m]láng, csak egy \[G]szikra az, amitől \[A]kigyullad. \echo{amitől \[A7]kigyullad}
-    \[D]Melegét szórja \[F#m]rád, csak a \[G]kezed kell, hogy oda\[A]nyújtsad. \echo{hogy oda\[A7]nyújtsad}
+    \[D]Melegét szórja \[F#m]rád, csak a \[G]kezed kell, hogy oda\[A]ny\_{ú}jtsad. \echo{hogy oda\[A7]ny\_{ú}jtsad}
   \endverse
 
   \beginchorus
@@ -30,7 +30,7 @@
 
   \beginverse
     ^Szívemben boldog^ság, mert az ^Úr, az Isten az ^én Atyám. \echo{igen, az ^én Atyám}
-    ^Lelkemben ég a ^vágy, hogy ^megtegyem az Ő ^akaratát. \echo{az Ő ^akaratát}
+    ^Lelkemben ég a ^vágy, h\_{o}gy ^megtegyem az Ő ^akaratát. \echo{az Ő ^akaratát}
   \endverse
 
   \beginverse*
