--- a/songs/aldjad-en-lelkem-az-urat.tex
+++ b/songs/aldjad-en-lelkem-az-urat.tex
@@ -8,33 +8,33 @@
 
   \beginverse\memorize
     \[Am]Áldjad, én \[Em]lelkem, az U\[Am]rat! \[Em]
-    \[Am]Áld\[Em]jad, én \[C]lelkem, \[D7]az U\[E]rat! \echo{Alle\[E7]luja}
-    \[Am]Áldjad, én \[Em]lelkem,
-    \[F]Áldjad, én \[G6]lel\[C]kem,
+    \[Am]Áld\[Em]jad, én \[C]lelkem, \[D7]az U\[E]rat! \echo{Alle\[E7]luj\_{a}}
+    \[Am]Áldjad, én \[Em]l\_{e}lkem,
+    \[F]Áldjad, én \[G6]l\_{e}l\[C]kem,
     \[Am]Áldjad, én \[Em]lelkem, az U\[Am]rat! \[Em] \[Am] \[Em]
   \endverse
 
   \beginverse
     ^Zengj alle^luját az Úr^nak! ^
-    ^Zengj ^alle^luját ^az Úr^nak! \echo{Alle^luja}
-    ^Zengj alle^luját,
-    ^Zengj alle^lu^ját,
+    ^Zengj ^alle^luját ^az Úr^nak! \echo{Alle^luj\_{a}}
+    ^Zengj alle^l\_{u}ját,
+    ^Zengj alle^l\_{u}^ját,
     ^Zengj alle^luját az Úr^nak! ^ ^ ^
   \endverse
 
   \beginverse
     ^Dicsérjük ^együtt az U^rat! ^
-    ^Di^csérjük ^együtt ^az U^rat! \echo{Alle^luja}
-    ^Dicsérjük ^együtt,
-    ^Dicsérjük ^egy^ütt,
+    ^Di^csérjük ^együtt ^az U^rat! \echo{Alle^luj\_{a}}
+    ^Dicsérjük ^\_{e}gyütt,
+    ^Dicsérjük ^\_{e}gy^ütt,
     ^Dicsérjük ^együtt az U^rat! ^ ^ ^
   \endverse
 
   \beginverse
     ^Áldjad, én ^bensőm, az U^rat! ^
-    ^Áld^jad, én ^bensőm, ^az U^rat! \echo{Alle^luja}
-    ^Áldjad, én ^bensőm,
-    ^Áldjad, én ^ben^sőm,
+    ^Áld^jad, én ^bensőm, ^az U^rat! \echo{Alle^luj\_{a}}
+    ^Áldjad, én ^b\_{e}nsőm,
+    ^Áldjad, én ^b\_{e}n^sőm,
     ^Áldjad, én ^bensőm, az U^rat! ^ ^ ^
   \endverse
 
