--- a/songs/aldjatok-az-urat.tex
+++ b/songs/aldjatok-az-urat.tex
@@ -6,7 +6,7 @@
   \endverse
 
   \beginverse*
-    /: \[Em]Tárjátok kezei\[Am]tek az élő Isten fe\[Em]lé!
+    /: \[Em]Tárjátok kezei\[Am]tek az él\_{ő} Isten fe\[Em]lé!
     \[Am]Áldjon meg téged \[Em]Sionból az Úr, \[D]ragyogtassa \[Hm]arcát re\[Em]ád! :/ \rep{2}
   \endverse
 
