--- a/songs/almaimbol-lelkembol.tex
+++ b/songs/almaimbol-lelkembol.tex
@@ -13,9 +13,9 @@
 
   \beginverse\memorize
     \[D] Szürke a \[G]föld és szürke az \[D]ég, kopár az \[G]út és csillag sem \[D]ég,
-    Elcsüggedt \[Em]szívű, magányos \[A]vándor, hova \[D]m\[A]ész?
+    Elcsüggedt \[Em]szívű, magányos \[A]vándor, hova \[D]m\[A]\_{é}sz?
     \[D] Ne menj to\[G]vább, nem futhatsz \[D]el, csak rajtad \[G]áll, csak tenned \[D]kell,
-    Elcsüggedt \[Em]szívű, magányos \[A]vándor, van re\[D]m\[A]ény!
+    Elcsüggedt \[Em]szívű, magányos \[A]vándor, van re\[D]m\[A]\_{é}ny!
   \endverse
 
   \beginchorus
@@ -27,9 +27,9 @@
 
   \beginverse
     ^ Valami^kor így éltem ^én, azt hittem ^már nincs is re^mény
-    Elcsüggedt ^szívű, magányos ^vándor voltam {^^é}n!
+    Elcsüggedt ^szívű, magányos ^vándor voltam {^^\_{é}}n!
     ^ Valaki ^jött, rám neve^tett: Ne menj to^vább, nyújtsd a ke^zed,
-    Elcsüggedt ^szívű, magányos ^vándor, sose ^f^élj!
+    Elcsüggedt ^szívű, magányos ^vándor, sose ^f^\_{é}lj!
   \endverse
 
   \beginverse*
