--- a/songs/aroni-aldas.tex
+++ b/songs/aroni-aldas.tex
@@ -7,13 +7,13 @@
   \fi
 
   \beginverse*\memorize
-    \[C]Áldjon meg \[Em]téged az {\[Dm G]Ú}r!
-    \[C]Áldjon meg \[Em]téged az {\[Dm G]Ú}r!
+    \[C]Áldjon m\_{e}g \[Em]téged az {\[Dm G]\_{Ú}}r!
+    \[C]Áldjon m\_{e}g \[Em]téged az {\[Dm G]\_{Ú}}r!
     És \[C]őrizzen \[G]meg tége\[C]det! \[C7]
   \endverse
 
   \beginverse*
-    /: \[Dm]Világo\[Em]sítsa meg az \[C]Úr
+    /: \[Dm]Világo\[Em]sítsa meg az \[C]\_{Ú}r
     Az \[Dm]Ő or\[Em]cáját te\[C]rajtad,
     És \[F]könyörüljön teraj\[G]tad! \[G7]
     \[C]Fordítsa az \[Em]Úr az Ő \[Dm]orcáját \[G]rád!
