--- a/songs/atyam-tied-vagyok.tex
+++ b/songs/atyam-tied-vagyok.tex
@@ -7,7 +7,7 @@
 
   \beginchorus
     \[C]Dicsőség ne\[F]vednek, \[E]dicsőség ne\[Am]vednek,
-    \[F]Dicsőség \[G]szent neved\[F]nek! \[C]
+    \[F]Dicsős\_{é}g \[G]szent neved\[F]nek! \[C]
   \endchorus
 
   \beginverse
