--- a/songs/bizom-benned.tex
+++ b/songs/bizom-benned.tex
@@ -8,17 +8,17 @@
 
   \beginchorus
     \[G]Bízom \[C9]Benned, \[Em7]igazságos \[D]Úr vagy,
-    \[G]Bízom \[C9]Benned, \[Em7]irgalmas, \[D]jó!
-    \[G]Bízom \[C9]Benned \[Em7]minden\[D]nap, örö\[G]kké! \[C9] \[Em7] \[D]
+    \[G]Bízom \[C9]Benned, \[Em7]irgalmas, \[D]j\_{ó}!
+    \[G]Bízom \[C9]Benned \[Em7]mind\_{e}n\[D]nap, örö\[G]kké! \[C9] \[Em7] \[D]
   \endchorus
 
   \beginverse\memorize
     \[G] Olyan messziről jöttem \[Am7]én,
-    És Te \[F]megvár\[C]tál, sokat \[G] vártál \[D]rám,
+    És Te \[F]megvár\[C]tál, sokat \[G] vártál \[D]r\_{á}m,
     \[G] Úgy hívlak a magány éjje\[Am7]lén,
     Mikor \[F]elvész a \[C]szó, mikor csak \[G]átölelni \[D]jó!
     \[Am]Tudom, hogy \[Em]távol voltam, \[G]fájt Ne\[D]ked.
-    \[Am]Tudom, hogy \[Em]nélküled nem \[C]élhe\[D]tek.
+    \[Am]Tudom, hogy \[Em]nélküled nem \[C]élhe\[D]t\_{e}k.
   \endverse
 
   \beginverse*
@@ -27,11 +27,11 @@
 
   \beginverse
     ^ Nézd, a szívem már Ti^éd!
-    Olyan ^boldog^ság, mikor ^ Téged ^lát!
+    Olyan ^boldog^ság, mikor ^ Téged ^l\_{á}t!
     ^ Hallod hangom lágy ne^szét,
     Kérlek, ^szólj hoz^zám, mikor csak ^Téged hív a ^szám!
     ^Életem ^nem féltem, hisz ^jó Ve^led.
-    ^Tudom, hogy ^nélküled nem ^élhe^tek!
+    ^Tudom, hogy ^nélküled nem ^élhe^t\_{e}k!
   \endverse
 
   \beginverse*
