--- a/songs/ebredj-ember.tex
+++ b/songs/ebredj-ember.tex
@@ -17,10 +17,10 @@
   \endverse
 
   \beginchorus
-    Alle\[C]luja, alle\[F]lu\[C]ja!
-    Alle\[C]luja, alle\[F]lu\[G]ja!
-    Alle\[Am]luja, alle\[F]luja, al\[C]le\[Em]lu\[Am]ja!
-    Alle\[Dm]luja, alle\[G]lu\[C]ja!
+    Alle\[C]luja, alle\[F]l\_{u}\[C]ja!
+    Alle\[C]luja, alle\[F]l\_{u}\[G]ja!
+    Alle\[Am]luja, alle\[F]luja, al\[C]le\[Em]l\_{u}\[Am]ja!
+    Alle\[Dm]luja, alle\[G]l\_{u}\[C]ja!
   \endchorus
 
   \beginverse*
@@ -31,10 +31,10 @@
 
   \beginchorus
 %     {\nolyrics (két félhang emelkedés) \[A7]}
-    Alle\[D]luja, alle\[G]lu\[D]ja!
-    Alle\[F#m]luja, alle\[G]lu\[A]ja!
-    Alle\[Hm]luja, alle\[G]luja, al\[D]le\[F#]lu\[Hm]ja!
-    Alle\[Em]luja, alle\[A]lu\[D]ja!
+    Alle\[D]luja, alle\[G]l\_{u}\[D]ja!
+    Alle\[F#m]luja, alle\[G]l\_{u}\[A]ja!
+    Alle\[Hm]luja, alle\[G]luja, al\[D]le\[F#]l\_{u}\[Hm]ja!
+    Alle\[Em]luja, alle\[A]l\_{u}\[D]ja!
   \endchorus
 
   \beginverse\memorize
