--- a/songs/egyutt-fog-ujjongni.tex
+++ b/songs/egyutt-fog-ujjongni.tex
@@ -2,7 +2,7 @@
 
   \beginverse*
     \[H7]Együtt fog ujjongni \[Em]fiatal és öreg is
-    És \[Am]örömében táncot lejt a \[H7]lány.
+    És \[Am]örömében táncot lejt a \[H7]l\_{á}ny.
   \endverse
 
   \beginverse*
@@ -14,11 +14,10 @@
 
   \beginverse*
     \[H7]Gyászukat ünnepre fordítom, s nem búsulnak ezután!
-  \endverse
-
-  \beginverse*
-    /: Vi\[Am]dámmá te\[D]szem a szívü\[G]ket,
-    Hogy \[Em]örvendezze\[Am]nek a \[H7]bánatuk he\[Em]lyett! :/ \rep{2}
+    Vi\[Am]dámmá te\[D]szem a szívü\[G]ket,
+    Hogy \[Em]örvendezze\[Am]nek a \[H7]bánatuk he\[Em]ly\_{e}tt!
+    Vi\[Am]dámmá te\[D]szem a szívü\[G]ket,
+    Hogy \[Em]örvendezze\[Am]nek a \[H7]bánatuk he\[Em]lyett!
   \endverse
 
 \endsong
