--- a/songs/en-uram-en-istenem.tex
+++ b/songs/en-uram-en-istenem.tex
@@ -13,7 +13,7 @@
   \endverse
 
   \beginverse
-    ^Én Uram, én ^Istenem
+    ^Én Uram, én ^Istenem,
     ^Add meg nekem ^mindenem,
     Ami ^segít ^ Fe^léd!
   \endverse
@@ -21,7 +21,7 @@
   \beginverse
     \[Em]Én Uram, én \[H7]Istenem,
     \[G]Fogadd el az \[D]életem,
-    \[C]Hadd legyen e\[D]gészen a Ti{\[G H7]é}d!
+    \[C]Hadd legyen e\[D]gészen a Ti{\[G H7]\_{é}}d!
   \endverse
 
   \beginverse
