--- a/songs/esti-hala.tex
+++ b/songs/esti-hala.tex
@@ -9,7 +9,7 @@
     \[D]Hálá\[Hm]t adok az \[Em]esti \[A6]órán,
     \[D]Hálá\[D7]t adok, hogy \[G]itt az \[A7]éj,
     \[D]Hálá\[D7]t adok, hogy \[G]szívem \[Gm]mélyén
-    \[D]hála \[A7]dala \[D]kél.
+    \[D]Hála \[A7]dala \[D]kél.
   \endverse
 
   \beginverse
@@ -27,16 +27,16 @@
   \endverse
 
   \beginverse
-    ^Hálá^t adok, hogy ^Tested ^táplált,
+    ^Hálá^t adok, hogy ^Tested ^táplál,
     % Igéd
-    ^Hálá^t, hogy ma is ^szólt sza^vad.
+    ^Hálá^t, hogy ma is ^szól sza^vad.
     ^Hálá^t adok, hogy ^lelkem ^biztos
     ^Cél fe^lé ha^lad.
   \endverse
 
   \beginverse
     ^Hálá^t adok, hogy ^mellém ^álltál,
-    ^Hálá^t adok, hogy szép az ^ottho^nom.
+    ^Hálá^t, hogy szép az ^ottho^nom.
     % van jó?
     ^Hálá^t, hogy munkám ^elvé^geztem,
     ^S békén ^alha^tom.
