--- a/songs/foltamadt-alleluja.tex
+++ b/songs/foltamadt-alleluja.tex
@@ -11,28 +11,28 @@
   % \fi
 
   \beginverse\memorize
-    \[D]Álltok \[A7]szótla\[D]nul, a \[G]dárda \[A]földre \[D]hull, \[Hm]
-    Itt \[G]más e\[A]rő az {\[D]\[Hm]Ú}r, itt \[Em]más e\[A]rő az \[D]Úr!
+    \[D]Álltok \[A7]sz\_{ó}tla\[D]nul, a \[G]dárda \[A]földre \[D]hull, \[Hm]
+    Itt \[G]más e\[A]rő az {\[D]\[Hm]\_{Ú}}r, itt \[Em]más e\[A]r\_{ő} az \[D]Úr!
   \endverse
 
   \beginverse
-    Az ^éj az ^hosszú ^volt, de ^eltűnt ^már a ^Hold, ^
-    A ^hajnal {^felsik}{^^o}lt, a ^hajnal ^felsi^kolt: \[D7]
+    Az ^éj az ^h\_{o}sszú ^volt, de ^eltűnt ^már a ^Hold, ^
+    A ^hajnal {^felsik}{^^\_{o}}lt, a ^hajnal ^f\_{e}lsi^kolt: \[D7]
   \endverse
 
   \beginchorus
-    \[G]Föltá\[A]madt! Allel{\[D]\[Hm]u}ja! \[Em]Föltámadt! \[A7]Allelu\[D]ja! \[Hm]
-    \[G]Föltá\[A]madt! Allel{\[D]\[Hm]u}ja! \[Em]Föltámadt! \[A7]Allelu\[D]ja!
+    \[G]Föltá\[A]madt! Allel{\[D]\[Hm]\_{u}}ja! \[Em]Föltámadt! \[A7]Allel\_{u}\[D]ja! \[Hm]
+    \[G]Föltá\[A]madt! Allel{\[D]\[Hm]\_{u}}ja! \[Em]Föltámadt! \[A7]Allel\_{u}\[D]ja!
   \endchorus
 
   \beginverse
-    ^Elég volt ^már, e^lég, ^fénnyel ^hinti az ^ég ^
-    Az ^új nap {^reggel}{^^é}t, az ^új nap ^regge^lét.
+    ^Elég volt ^m\_{á}r, e^lég, ^fénnyel ^hinti az ^ég ^
+    Az ^új nap {^reggel}{^^\_{é}}t, az ^új nap ^r\_{e}gge^lét.
   \endverse
 
   \beginverse
-    ^Virágban ^áll a ^rét, a ^virágos ^úton ^át ^
-    ^Valaki ^jön fel{^^é}d, ^valaki ^jön fe^léd. \[D7]
+    ^Virágban ^\_{á}ll a ^rét, a ^virágos ^úton ^át ^
+    ^Valaki ^jön fel{^^\_{é}}d, ^valaki ^j\_{ö}n fe^léd. \[D7]
   \endverse
 
   \beginverse*
@@ -40,8 +40,8 @@
   \endverse
 
   \beginverse
-    ^Virágban ^áll a ^rét, a ^virágos ^úton ^át ^
-    ^Jézus ^jön fel{^^é}d, ^Jézus ^jön fe^léd.
+    ^Virágban ^\_{á}ll a ^rét, a ^virágos ^úton ^át ^
+    ^Jézus ^jön fel{^^\_{é}}d, ^Jézus ^j\_{ö}n fe^léd.
   \endverse
 
   \beginverse*
