Included szamtalan-a-csoda

--- a/songs.tex
+++ b/songs.tex
@@ -71,6 +71,7 @@
 \input{songs/reggeli-hala.tex}
 \input{songs/rejts-most-el.tex}
 \input{songs/sotet-fenn-az-eg.tex}
+\input{songs/szamtalan-a-csoda.tex}
 \input{songs/szentlelek-jojj.tex}
 \input{songs/szeretem-orokke.tex}
 \input{songs/tancolj-az-urnak.tex}
