--- a/songs/ime-az-isten-satora.tex
+++ b/songs/ime-az-isten-satora.tex
@@ -7,18 +7,18 @@
   \fi
 
   \beginverse\memorize
-    \[Em]Ímé, az Isten \[Hm]sátora az \[Em]emberekkel \[Hm]van,
-    \[Em]Maga az Isten \[D]lesz velük, az \[G]ő Iste\[H]nük. \[H7]
+    \[Em]Ímé, az \_{I}sten \[Hm]sátora az \[Em]emberekkel \[Hm]van,
+    \[Em]Maga az \_{I}sten \[D]lesz velük, az \[G]ő Iste\[H]nük. \[H7]
   \endverse
 
   \beginchorus
-    /: \[Em]Jézus, Te \[D]vagy a Király!
-    \[Em]Jézus, Te \[D]vagy a Ki\[Em]rály! :/ \rep{2} \[Hm]
+    /: \[Em]J\_{é}zus, Te \[D]vagy a Király!
+    \[Em]J\_{é}zus, Te \[D]vagy a Ki\[Em]rály! :/ \rep{2} \[Hm]
   \endchorus
 
   \beginverse
     ^Isten letörli a ^könnyeket az ^ő szemeik^ről.
-    ^Halál nem lesz már ^többé, sem ^gyász, sem fájda^lom. ^
+    ^Halál nem lesz már ^t\_{ö}bbé, sem ^gyász, sem fájda^lom. ^
   \endverse
 
   \beginverse*
@@ -27,7 +27,7 @@
 
   \beginverse
     Ki ^győz, örökségül ^nyer mindent, szí^vébe írom ne^vem,
-    ^Annak Iste^ne leszek, s fi^am lesz ő né^kem. ^
+    ^Annak \_{I}ste^ne leszek, s fi^am lesz ő né^kem. ^
   \endverse
 
   \beginverse*
