--- a/songs/hazamegy-a-vandor.tex
+++ b/songs/hazamegy-a-vandor.tex
@@ -7,14 +7,14 @@
     \[H] Ami ezen a földön \[C#m]körbevesz, \[F#] az olyan nekem, mint egy \[H]múló álom.
     \[G#m] Nemrég kezdődött, máris \[E]vége lesz, ha a \[F#]nap felkel a láthatáron.
     \[H] Nincs itt maradandó \[C#m]városom, \[F#] a szívem azt az \[H]új világot várja.
-    \[G#m] És összehajtom majd a \[E]vánkosom, ha a \[F#]hajnal rámtalál.
+    \[G#m] És összehajtom majd a \[E]vánkosom, ha a \[F#]hajnal rám talál.
   \endverse
 
   \beginchorus
     Hazamegy a \[H]vándor, erről álmodott ő \[G#m] százszor.
-    Arra tette fel az \[E]életét, hogy egy \[G#m]szép napon majd \[F#sus4]célba ér. \[F#]
+    Arra tette fel az \[E]életét, hogy egy \[G#m]szép napon majd \[F#sus4]célba \_{é}r. \[F#]
     Hazamegy a \[H]vándor, eltűnik, mint a \[G#m] kámfor.
-    Mintha soha nem lett \[E]volna itt, egy szempillantás és meg\[H]érkezik. \[F#]
+    Mintha soha nem lett \[E]volna itt, egy szempillantás és meg\[H]érkez\_{i}k. \[F#]
   \endchorus
 
   \beginverse*
@@ -26,9 +26,9 @@
   \endverse
 
   \beginverse*
-    Mert \[E]új eget, és egy új \[G#m]földet \[F#]várunk,
-    \[E]Új folyókban úszunk majd, és \[G#m]új hegyeket \[F#]mászunk.
-    \[E] Ez a bolygó nem az \[G#m]igazi vi\[F#]lágunk.
+    Mert \[E]új eget, és egy új \[G#m]f\_{ö}ldet \[F#]v\_{á}runk,
+    \[E]Új folyókban úszunk majd, és \[G#m]új hegyeket \[F#]m\_{á}szunk.
+    \[E] Ez a bolygó nem az \[G#m]igazi vi\[F#]l\_{á}gunk.
     Itt csak \[E]utazunk, át\[F#]utazunk.
   \endverse
 
