Fixed underlined character with chord over it

--- a/songs/adjunk-halat.tex
+++ b/songs/adjunk-halat.tex
@@ -19,7 +19,7 @@
     Allelu\[Hm]ja, az Úr az \[Em]Isten!
     Allelu\[Am]ja, a Megvál\[D]tó!
     Allelu\[Hm]ja, az Úr az \[Em]Isten!
-    Zengj alle\[Am]luját! \[D7]\_{Á}\[G]men! \[C] \[G]
+    Zengj alle\[Am]luját! \[D7]{\_{Á}}\[G]men! \[C] \[G]
   \endchorus
 
   \beginverse
