--- a/songs/aldjad-en-lelkem-az-urat.tex
+++ b/songs/aldjad-en-lelkem-az-urat.tex
@@ -25,8 +25,8 @@
   \beginverse
     ^Dicsérjük ^együtt az U^rat! ^
     ^Di^csérjük ^együtt ^az U^rat! \echo{Alle^luj\_{a}}
-    ^Dicsérjük ^\_{e}gyütt,
-    ^Dicsérjük ^\_{e}gy^ütt,
+    ^Dicsérjük ^{\_{e}}gyütt,
+    ^Dicsérjük ^{\_{e}}gy^ütt,
     ^Dicsérjük ^együtt az U^rat! ^ ^ ^
   \endverse
 
