--- a/songs/apokrif-ima.tex
+++ b/songs/apokrif-ima.tex
@@ -7,22 +7,22 @@
   \fi
 
   \beginverse\memorize
-    \[D]Oldani Uram, s oldódni \[A]v\_{á}gyom,
-    \[A7]Üdvözíteni, és üdvözülni \[D]v\_{á}gyom,
+    \[D]Oldani Uram, s oldódni \[A]v{\_{á}}gyom,
+    \[A7]Üdvözíteni, és üdvözülni \[D]v{\_{á}}gyom,
     \[G] Alkotni \[D]Uram, \[A7] s alakulni \[D]vágyom,
     \[Em] Alkotni \[A6]Uram, \[A7] s alakulni \[D]vágyom.
   \endverse
 
   \beginverse
-    ^Ékesíteni, és ékesedni ^v\_{á}gyom,
-    ^Dalolni Uram, és dallá lenni ^v\_{á}gyom,
+    ^Ékesíteni, és ékesedni ^v{\_{á}}gyom,
+    ^Dalolni Uram, és dallá lenni ^v{\_{á}}gyom,
     ^ Követeddé ^lenni, ^ Érted tenni ^vágyom,
     ^ Követeddé ^lenni, ^ Érted tenni ^vágyom.
   \endverse
 
   \beginverse
     ^Lámpád vagyok, ha l\_{á}tsz \_{e}n^gem,
-    ^Ajtód vagyok, ha zörgetsz ^b\_{e}nnem,
+    ^Ajtód vagyok, ha zörgetsz ^b{\_{e}}nnem,
     ^ Ki látod ^mit teszek, ^ hallgass el ^engem,
     ^ Ki látod ^mit teszek, ^ hallgass el ^engem.
   \endverse
